BatteryMonitor/BatteryMonitorWorkspace/BatteryMonitor01.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 09/25/2015 15:59:15 Project: BatteryMonitor01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\danielpi\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p Y:\repos\PSoC-4-BLE-Experiments\BatteryMonitor\BatteryMonitorWorkspace\BatteryMonitor01.cydsn\BatteryMonitor01.cyprj -d CY8C4247LQI-BL483 -s Y:\repos\PSoC-4-BLE-Experiments\BatteryMonitor\BatteryMonitorWorkspace\BatteryMonitor01.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
.\main.c: In function 'initializeSystem':
.\main.c:21:5: error: 'PRS' undeclared (first use in this function)
     PRS
     ^
.\main.c:21:5: note: each undeclared identifier is reported only once for each function it appears in
.\main.c:22:1: error: expected ';' before '}' token
 }
 ^
.\main.c: In function 'main':
.\main.c:31:5: error: expected ';' before 'for'
     for(;;)
     ^
.\main.c:35:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/25/2015 15:59:28 ---------------
